samples/_failures_safe/1761488859_d2ebcb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b2570e34.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_b2570e34.c:159:14: error: ‘TOKEN_OPER’ undeclared (first use in this function)
  159 |         case TOKEN_OPER
      |              ^~~~~~~~~~
./samples/SAFE/__tmp_b2570e34.c:159:14: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_b2570e34.c:159:9: error: expected ‘:’ or ‘...’ at end of input
  159 |         case TOKEN_OPER
      |         ^~~~
./samples/SAFE/__tmp_b2570e34.c:159:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b2570e34.c:159:9: error: expected declaration or statement at end of input
